--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Carbon";
-    src: url("/fonts/Carbon.ttf") format("truetype");
+    font-family: "Bowhouse";
+    src: url("/fonts/Bowhouse-Regular.otf") format("opentype");
 }
 
 html {
@@ -11,10 +11,11 @@ body {
     height: 100%;
     width: 100%;
     margin: 0;
+    font-family: Consolas, monaco, monospace, Arial, Helvetica, sans-serif;
 }
 
 .circle {
-    position: absolute;
+    position: fixed;
     height: 50rem;
     width: 50rem;
     border-radius: 50%;
@@ -47,7 +48,7 @@ body {
     position: absolute;
     height: 50rem;
     width: 50rem;
-    background: #c7fffc;
+    background: #e0fffc;
     border-radius: 50%;
     opacity: 0.5;
 }
@@ -62,7 +63,17 @@ h1 {
     width: 1px;
 }
 
+h2,
+h3 {
+    font-family: Bowhouse, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-transform: uppercase;
+}
+
 /* CONTENT */
+
+img {
+    height: 5rem;
+}
 
 header,
 footer {
@@ -75,6 +86,7 @@ main {
     height: 76%;
     background: #B3CEF8;
     width: 100%;
+    min-height: 40rem;
 }
 
 .content {
@@ -95,8 +107,61 @@ section {
 .profile {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 20%;
     height: 80%;
+    min-height: 35rem;
+}
+
+.profile .img-container {
+    height: 55%;
+    width: 90%;
+    margin-top: 5%;
+    overflow: hidden;
+}
+
+.profile .img-container img {
+    object-fit: cover;
+    width: 120%;
+    height: 120%;
+    transform: translateX(-10%);
+}
+
+.profile-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 45%;
+    width: 90%;
+}
+
+.profile h2 {
+    font-size: 2.5em;
+    margin: 0;
+}
+
+.profile ul {
+    list-style: circle;
+    padding-left: 3%;
+    margin: 0;
+}
+
+.profile ul li {
+    padding-bottom: 0.5rem;
+}
+
+.profile-text div {
+    display: inline-flex;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 1rem;
+    font-weight: bold;
+}
+
+.profile img {
+    height: 2rem;
 }
 
 .works {
@@ -104,14 +169,106 @@ section {
     flex-direction: column;
     width: 60%;
     height: 105%;
+    min-height: 40rem;
 }
 
-h2 {
-    font-family: Carbon;
-    font-weight: 100;
+.works-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 4%;
+    height: 100%;
+    align-items: center;
 }
 
-img {
-    max-height: 5rem;
+.works h2 {
+    font-size: 3.5em;
+    margin: 1rem 0 0 1rem;
+}
+
+.project-card {
+    display: flex;
+    background-color: #fff;
+    height: 29%;
+    width: 90%;
+    gap: 2%;
+}
+
+.project-card a {
+    display: block;
+    width: 60%;
+    height: 98%;
+    overflow: hidden;
+    border: 2px solid #3B4555;
+    color: #C25710;
+}
+
+.project-card a:hover {
+    color: #3B4555;
+}
+
+.project-card a img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.card-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.card-text h3{
+    margin: 0;
+    font-size: 2.1em;
+}
+
+.card-text p{
+    margin: 0;
+    line-height: 1.7em;
+}
+
+.project-card .card-text a {
+    border: none;
+    display: inline;
+}
+
+.card-text ul {
+    list-style: circle;
+    padding: 0;
+    margin: 0 0 0 1rem;
+}
+
+.card-text ul li {
+    margin-bottom: 0.2rem;
+}
+
+footer {
+    display: flex;
+}
+
+footer div {
+    font-family: Georgia, Times, Times New Roman, serif;
+    color: #B3CEF8;
+    align-self: center;
+    margin-left: 4rem;
+    font-size: 1.2em;
+}
+
+@media (max-width: 1462px) {
+    .content {
+        gap: 1%;
+    }
+
+    .profile {
+        width: 30%;
+        height: 80%;
+        min-height: 35rem;
+    } 
+
+    .works {
+        width: 66%;
+    }
 }
 
