--- a/css/index.css
+++ b/css/index.css
@@ -16,8 +16,8 @@ body {
 
 .circle {
     position: fixed;
-    height: 50rem;
-    width: 50rem;
+    height: 40rem;
+    width: 40rem;
     border-radius: 50%;
 }
 
@@ -36,17 +36,17 @@ body {
 
 .circle-1 {
     top: 0;
-    left: 5%;
+    left: 2%;
 }
 
 .circle-2 {
     top: 50%;
-    right: 5%;
+    right: 2%;
 }
 
 .circle div {
-    height: 50rem;
-    width: 50rem;
+    height: 40rem;
+    width: 40rem;
     background: #e0fffc;
     border-radius: 50%;
     opacity: 0.5;
@@ -68,6 +68,13 @@ h3 {
     text-transform: uppercase;
 }
 
+.faded-text {
+    font-family: Consolas, monaco, monospace, Arial, Helvetica, sans-serif;
+    color: grey;
+    font-size: 1em;
+    font-weight: lighter;
+}
+
 /* CONTENT */
 
 img {
@@ -77,12 +84,12 @@ img {
 header,
 footer {
     width: 100%;
-    height: 12%;
+    height: 10%;
     background: #3B4555;
 }
 
 main {
-    height: 76%;
+    height: 80%;
     background: #B3CEF8;
     width: 100%;
     min-height: 40rem;
@@ -99,7 +106,7 @@ main {
 section {
     z-index: 1;
     background: #fff;
-    margin-top: 2rem;
+    margin-top: 1rem;
     position: relative;
 }
 
@@ -167,7 +174,6 @@ section {
     display: flex;
     flex-direction: column;
     width: 60%;
-    height: 105%;
     min-height: 40rem;
 }
 
@@ -177,6 +183,9 @@ section {
     gap: 4%;
     height: 100%;
     align-items: center;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    overflow-y: scroll;
 }
 
 .works h2 {
@@ -187,7 +196,7 @@ section {
 .project-card {
     display: flex;
     background-color: #fff;
-    height: 29%;
+    min-height: 30.5%;
     width: 90%;
     gap: 2%;
 }
@@ -195,9 +204,9 @@ section {
 .project-card a {
     display: block;
     width: 60%;
-    height: 98%;
+    height: 100%;
     overflow: hidden;
-    border: 2px solid #3B4555;
+    border: 1px solid #3B4555;
     color: #C25710;
 }
 
@@ -207,8 +216,9 @@ section {
 
 .project-card a img {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    max-width: 100%;
 }
 
 .card-text {
@@ -216,6 +226,11 @@ section {
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
+}
+
+.card-text div {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .card-text h3{
@@ -262,13 +277,13 @@ footer div {
         }
     
         100% {
-            transform: scale(1.07);
+            transform: scale(1.05);
         }
     }
     
     @keyframes minimize {
         0% {
-            transform: scale(1.07);
+            transform: scale(1.05);
         }
     
         100% {
@@ -294,9 +309,13 @@ footer div {
         width: 66%;
     }
 
+    .works-wrap {
+        gap: 5%;
+    }
+
     .circle {
-        height: 40rem;
-        width: 40rem;
+        height: 25rem;
+        width: 25rem;
     }
     
     .circle-1 {
@@ -308,8 +327,8 @@ footer div {
     }
     
     .circle div {
-        height: 40rem;
-        width: 40rem;
+        height: 25rem;
+        width: 25rem;
     }
 }
 
@@ -320,7 +339,19 @@ footer div {
 
     .works {
         margin-top: 1rem;
-        min-height: 45rem;
+        min-height: 43rem;
+    }
+
+    .works-wrap {
+        gap: 3%;
+    }
+
+    .project-card {
+        min-height: 31.5%;
+    }
+
+    .card-text {
+        margin-top: 0.8rem;
     }
 
     .works h2 {
@@ -390,28 +421,37 @@ footer div {
         margin-bottom: 2rem;
     }
 
-    .works h2 {
-        margin: 1rem;
-    }
-
     .works-wrap {
-        height: 100rem;
-        gap: 2%;
+        min-height: 100%;
+        overflow-y: visible;
+        padding-bottom: 2rem;
+        gap: 0;
     }
 
     .project-card {
         flex-direction: column;
         padding: 2%;
+        height: auto;
+        gap: 0;
+        margin-bottom: 1rem;
     }
 
     .project-card a {
         min-width: 99.3%;
-        min-height: 50%;
+        min-height: 18rem;
+    }
+
+    .project-card a img {
+        height: 100%;
     }
 
     .card-text {
         height: 100%;
-        line-height: 1.7em;
+        line-height: auto;
+    }
+
+    .card-text ul {
+        margin-top: 0.5rem;
     }
 
     .circle {
@@ -449,17 +489,20 @@ footer div {
     }
 
     .works h2 {
-        font-size: 3em;
+        font-size: 2.5em;
     }
 
     .card-text h3 {
-        font-size: 1.9em;
+        font-size: 1.7em;
     }
 
     .works-wrap {
         justify-content: space-evenly;
         gap: 2%;
-        height: 95rem;
+    }
+
+    .project-card a {
+        min-height: 13rem;
     }
 
     .circle {
