--- a/css/hop.css
+++ b/css/hop.css
@@ -152,3 +152,21 @@
     text-align: right;
   }
 
+  .error {
+    z-index: 2;
+    padding: 0 1rem;
+    margin-top: 2rem;
+    text-align: center;
+  }
+  
+@media (min-width: 951px) {
+    .error {
+        display: none;
+    }
+}
+
+@media (max-width: 950px) {
+    #hopGame {
+        display: none;
+    }
+}
