--- a/css/index.css
+++ b/css/index.css
@@ -222,6 +222,7 @@ section {
 }
 
 .project-card a {
+    position: relative;
     display: block;
     width: 60%;
     height: 100%;
@@ -232,6 +233,16 @@ section {
 
 .project-card a:hover {
     color: #3B4555;
+}
+
+.improving {
+    position:absolute;
+    background: white;
+    opacity: 0.7;
+    background: url(../images/tools.png) no-repeat center/6.5rem;
+    min-height: 100%;
+    min-width: 100%;
+    max-width: 100%;
 }
 
 .project-card a img {
